[package]
name = "dilate"
version = "0.6.1"
edition = "2021"
license-file = "LICENSE.md"
description = "A compact, high performance integer dilation library for Rust."
homepage = "https://github.com/alexmadeathing/dilate"
repository = "https://github.com/alexmadeathing/dilate"
documentation = "https://docs.rs/dilate"
readme = "README.md"
categories = ["algorithms", "encoding"]
keywords = ["morton", "integer", "dilate", "dilation", "octree"]

[features]
std = []

[dependencies]

[dev-dependencies]
lazy_static = "1.4.0" # For test data
paste = "1.0.6" # For generation of multi-dimensional, multi-type, test names
